# lfm-train

./: .gitignore  BENCHMARK.md  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: base.yaml  danube3_500m.yaml  lfm2.5_1.2b.yaml  lfm2.5_230m.yaml  lfm2.5_350m.yaml  qwen3_0.6b.yaml  smollm2_360m.yaml
docs/: compositional-generalization.md
domains/: promql.yaml
examples/: prompt_gguf.py  prompt_transformers.py
src/lfm_train/: benchmark.py  dataset.py  evaluate.py  infer.py  plot.py  publish.py  trainer.py
src/lfm_train/backends/: __init__.py  base.py  config_map.py  cuda.py  mlx.py
src/lfm_train/data/: engine.py  generate.py
