[project]
name = "lfm-train"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "trl>=0.17.0",
    "peft>=0.14.0",
    "transformers>=4.52.0",
    "datasets>=3.6.0",
    "accelerate>=1.8.0",
    "bitsandbytes>=0.45.5",
    "sentencepiece>=0.2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "matplotlib>=3.9.0",
    "huggingface-hub>=0.26.0",
]

[project.optional-dependencies]
# Install with: uv sync --extra gpu
gpu = [
    "torch>=2.6.0",
    "unsloth",
    "unsloth-zoo",
]

[project.scripts]
train         = "lfm_train.trainer:main"
evaluate      = "lfm_train.evaluate:main"
gen-dataset   = "lfm_train.data.generate:main"
benchmark     = "lfm_train.benchmark:main"
infer         = "lfm_train.infer:main"
publish       = "lfm_train.publish:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lfm_train"]

[tool.uv.sources]
# Pulls the latest unsloth from git; pin to a commit SHA for reproducibility
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

[tool.uv.extra-build-dependencies]
unsloth = ["setuptools"]
